# STerminal

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
backend/: .env.example  pyproject.toml
backend/app/: cache.py  command_router.py  commands.py  correlation.py  db.py  deps.py  main.py  models.py  portfolio.py  registry.py  search_router.py  stream_router.py  value_chain.py  watchlist_router.py  watchlist_store.py
backend/app/providers/: _util.py  alphavantage.py  base.py  crypto.py  equity.py  fx.py
backend/tests/: conftest.py  httpx_mock.py  test_alphavantage_provider.py  test_app.py  test_cache.py  test_command_router.py  test_commands.py  test_correlation.py  test_crypto_provider.py  test_db.py  test_equity_provider.py  test_fx_provider.py  test_portfolio.py  test_provider_protocol.py  test_registry.py  test_search_router.py  test_stream_router.py  test_value_chain.py  test_watchlist_router.py  test_watchlist_store.py
backend/tests/fixtures/: alphavantage_daily_aapl.json  alphavantage_news_aapl.json  alphavantage_overview_aapl.json  alphavantage_quote_aapl.json  alphavantage_search_apple.json  crypto_coin_bitcoin.json  crypto_coin_no_links.json  crypto_ohlc_bitcoin.json  crypto_quote_bitcoin.json  crypto_search_bitcoin.json  equity_history_aapl.json  equity_info_aapl.json  equity_news_aapl.json  equity_search_apple.json  fx_latest_eurusd.json  fx_previous_eurusd.json  fx_symbols.json  fx_timeseries_eurusd.json
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: feature-worktree.sh  preview-server.sh
(+124 files in other folders)
