[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sterminal-backend"
version = "0.1.0"
description = "sterminal backend — FastAPI + SQLite + Provider interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "yfinance",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["app*"]
